# BotMark-T3

./: .gitignore  README.md
Firmware/Paint_robot/: platformio.ini
Firmware/Paint_robot/examples/: IMU.cpp  motors.cpp
Firmware/Paint_robot/include/: config.h
Firmware/Paint_robot/lib/EncoderHandler/: encoder_handler.cpp  encoder_handler.h
Firmware/Paint_robot/lib/ImuManager/: imu_manager.cpp  imu_manager.h
Firmware/Paint_robot/lib/Kinematics/: kinematics.cpp  kinematics.h
Firmware/Paint_robot/lib/MotorsController/: motors_controller.cpp
Firmware/Paint_robot/lib/PIDController/: pid_controller.cpp  pid_controller.h
Firmware/Paint_robot/lib/ZenohManager/: zenoh_manager.cpp  zenoh_manager.h
Firmware/Paint_robot/src/: main.cpp
Firmware/diff_drive_controller/: encoder_handler.h
Mechanics/: ServoDamper-Box.stl  Wheel.stl
Software/ros2_ws/src/lidar_localization/src/: localizador_node.cpp
firmware/: platformio.ini
firmware/examples/: IMU.cpp  PID.cpp  encoders.cpp  zenoh.cpp
firmware/lib/EncoderHandler/: encoder_handler.cpp
firmware/lib/ImuManager/: imu_manager.cpp  imu_manager.h
firmware/lib/Kinematics/: kinematics.cpp  kinematics.h
firmware/lib/ZenohManager/: zenoh_manager.cpp  zenoh_manager.h
firmware/src/: main.cpp
mechanics/: funnelsandv5.stl
ros2_ws/: .gitignore
ros2_ws/log/: latest_build
ros2_ws/src/beacon_locator/: CMakeLists.txt  package.xml
ros2_ws/src/beacon_locator/include/lidar_localization/: localizador_node.hpp
ros2_ws/src/beacon_locator/src/: localizador_node.cpp  other.cpp
ros2_ws/src/controller_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/controller_pkg/include/controller_pkg/: controller_node.hpp
ros2_ws/src/controller_pkg/src/: controller_node.cpp
ros2_ws/src/mission_manager/: package.xml  setup.py
ros2_ws/src/mission_manager/config/: test_route.yaml
ros2_ws/src/mission_manager/mission_manager/: mission_node.py
ros2_ws/src/obstacle_detector/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_detector/include/obstacle_detector/: obstacle_detector_node.hpp
ros2_ws/src/obstacle_detector/src/: obstacle_detector_node.cpp
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/launch/: robot_core.launch.py
ros2_ws/src/zenoh_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/zenoh_bridge/include/zenoh_bridge/: zenoh_bridge_node.hpp
ros2_ws/src/zenoh_bridge/src/: zenoh_bridge_node.cpp
